--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-24Y47S08SF"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-24Y47S08SF');
+</script>
 <body class="bg-white text-gray-900">
     <header class="bg-apple-gray py-4 shadow-sm">
         <div class="container mx-auto px-4 md:px-8">
