--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
             background-color: #dcdcdf !important;
         }
     </style>
+    <!-- Basic OG Meta -->
+    <meta property="og:title" content="170 cm in Feet – Convert cm to Feet and Inches" />
+    <meta property="og:description" content="Convert 170 cm to feet and inches easily. Use our simple height converter and explore quick reference charts." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://170cminfeet.com" />
+    <meta property="og:image" content="https://170cminfeet.com/og-image.jpg" />
+    <meta property="og:site_name" content="CM to Feet Converter" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="170 cm in Feet – Convert cm to Feet and Inches" />
+    <meta name="twitter:description" content="Quickly convert 170 cm to feet and inches with our accurate online tool and chart." />
+    <meta name="twitter:image" content="https://170cminfeet.com/og-image.jpg" />
+    <meta name="twitter:site" content="@Dustin_Egg" />
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-24Y47S08SF"></script>
