--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -108,7 +108,7 @@
                 <p class="mb-4">We may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page and updating the "Last Updated" date at the top of this privacy policy.</p>
                 
                 <h2 class="text-2xl font-semibold mt-8 mb-4">11. Contact Us</h2>
-                <p class="mb-4">If you have any questions about this privacy policy or our privacy practices, please contact us at: privacy@170cminfeet.com</p>
+                <p class="mb-4">If you have any questions about this privacy policy or our privacy practices, please contact us at: support@170cminfeet.com</p>
             </div>
         </section>
     </main>
