--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -111,7 +111,7 @@
                 <p class="mb-4">These Terms constitute the sole and entire agreement between you and 170cminfeet.com regarding the Website and supersede all prior and contemporaneous understandings, agreements, representations, and warranties, both written and oral, regarding the Website.</p>
                 
                 <h2 class="text-2xl font-semibold mt-8 mb-4">12. Contact Us</h2>
-                <p class="mb-4">If you have any questions about these Terms, please contact us at: terms@170cminfeet.com</p>
+                <p class="mb-4">If you have any questions about these Terms, please contact us at: support@170cminfeet.com</p>
             </div>
         </section>
     </main>
