--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto px-4 md:px-8">
             <nav class="flex justify-between items-center">
                 <a href="/" class="flex items-center">
-                    <img src="/logo.png" alt="170cminfeet Logo" class="h-10 mr-3">
+                    <img src="/logo.webp" alt="170cminfeet Logo" class="h-10 mr-3" style="width: 40px; height: 40px;" width="40" height="40">
                     <span class="text-xl font-semibold">170cminfeet</span>
                 </a>
                 <div class="hidden md:flex space-x-6">
