--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="canonical" href="https://170cminfeet.com/">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
+    <link href="./output.css" rel="stylesheet">
+    <!--<script src="https://cdn.tailwindcss.com"></script>-->
+    <!--<script>
         tailwind.config = {
             theme: {
                 extend: {
@@ -26,62 +27,8 @@
                 }
             }
         }
-    </script>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-        }
-        /* 提高对比度的颜色变量 */
-        :root {
-            --text-dark: #1a1a1a;
-            --text-medium: #333333;
-            --link-color: #0057b7;
-            --link-hover: #003d82;
-        }
-        /* 应用高对比度文本颜色 */
-        .text-apple-darkgray {
-            color: var(--text-medium) !important;
-        }
-        /* 提高表单标签对比度 */
-        .text-gray-700 {
-            color: var(--text-dark) !important;
-            font-weight: 500;
-        }
-        /* 表格样式 */
-        .height-table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        .height-table th, .height-table td {
-            border: 1px solid #c5c7ca;
-            padding: 8px 12px;
-            text-align: center;
-            color: var(--text-dark);
-        }
-        .height-table th {
-            background-color: #e9ecef;
-            color: var(--text-dark);
-            font-weight: 600;
-        }
-        .height-table tr:nth-child(even) {
-            background-color: #f5f7fa;
-        }
-        .height-table tr:hover {
-            background-color: #e2e6ea;
-            transition: background-color 0.2s ease;
-        }
-        .height-table tr.bg-apple-gray:hover {
-            background-color: #d3d7db !important;
-        }
-        /* 改善表单可访问性 */
-        input[type="number"] {
-            border: 2px solid #6b7280;
-        }
-        input[type="number"]:focus {
-            border-color: #0057b7;
-            outline: 2px solid #0057b7;
-        }
-    </style>
+    </script>-->
+
     <!-- Basic OG Meta -->
     <meta property="og:title" content="170 cm in Feet – Convert cm to Feet and Inches" />
     <meta property="og:description" content="Convert 170 cm to feet and inches easily. Use our simple height converter and explore quick reference charts." />
