--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>170 cm in Feet – Convert cm to Feet and Inches</title>
     <meta name="description" content="Convert 170 cm to feet and inches. Use our simple height converter for accurate cm to feet conversion and view a quick reference table.">
     <link rel="canonical" href="https://170cminfeet.com/">
-    <link rel="icon" href="https://170cminfeet.com/imgs/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://170cminfeet.com/imgs/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://170cminfeet.com/imgs/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" sizes="32x32" href="https://170cminfeet.com/imgs/favicon-32x32.png" type="image/png">
+    <link rel="icon" sizes="16x16" href="https://170cminfeet.com/imgs/favicon-16x16.png" type="image/png">
+    <link rel="manifest" href="https://170cminfeet.com/imgs/site.webmanifest">
     <link href="https://170cminfeet.com/imgs/output.css" rel="stylesheet">
     <!--<script src="https://cdn.tailwindcss.com"></script>-->
     <!--<script>
