--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
     <meta name="twitter:description" content="Quickly convert 170 cm to feet and inches with our accurate online tool and chart." />
     <meta name="twitter:image" content="https://170cminfeet.com/imgs/og-image.png" />
     <meta name="twitter:site" content="@Dustin_Egg" />
-
+	
+	<meta name="google-adsense-account" content="ca-pub-2991511202330314">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991511202330314"
+			crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-white text-gray-900">
