--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
     <meta name="twitter:description" content="Quickly convert 170 cm to feet and inches with our accurate online tool and chart." />
     <meta name="twitter:image" content="https://170cminfeet.com/imgs/og-image.png" />
     <meta name="twitter:site" content="@Dustin_Egg" />
-	
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "sakjieg846");
+    </script>
+
 	<meta name="google-adsense-account" content="ca-pub-2991511202330314">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2991511202330314"
 			crossorigin="anonymous"></script>
