--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="icon" sizes="32x32" href="https://170cminfeet.com/imgs/favicon-32x32.png" type="image/png">
     <link rel="icon" sizes="16x16" href="https://170cminfeet.com/imgs/favicon-16x16.png" type="image/png">
     <link rel="manifest" href="https://170cminfeet.com/imgs/site.webmanifest">
-    <link href="https://170cminfeet.com/imgs/output.css" rel="stylesheet">
-    <!--<script src="https://cdn.tailwindcss.com"></script>-->
-    <!--<script>
+<!--    <link href="https://170cminfeet.com/imgs/output.css" rel="stylesheet">-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
         tailwind.config = {
             theme: {
                 extend: {
@@ -29,7 +29,7 @@
                 }
             }
         }
-    </script>-->
+    </script>
 
     <!-- Basic OG Meta -->
     <meta property="og:title" content="170 cm in Feet – Convert cm to Feet and Inches" />
