--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>170 cm in Feet – Convert cm to Feet and Inches</title>
     <meta name="description" content="Convert 170 cm to feet and inches. Use our simple height converter for accurate cm to feet conversion and view a quick reference table.">
     <link rel="canonical" href="https://170cminfeet.com/">
-    <link rel="apple-touch-icon" href="https://170cminfeet.com/imgs/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" sizes="32x32" href="https://170cminfeet.com/imgs/favicon-32x32.png" type="image/png">
-    <link rel="icon" sizes="16x16" href="https://170cminfeet.com/imgs/favicon-16x16.png" type="image/png">
-    <link rel="manifest" href="https://170cminfeet.com/imgs/site.webmanifest">
-<!--    <link href="https://170cminfeet.com/imgs/output.css" rel="stylesheet">-->
+    <link rel="apple-touch-icon" href="./imgs/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" sizes="32x32" href="./imgs/favicon-32x32.png" type="image/png">
+    <link rel="icon" sizes="16x16" href="./imgs/favicon-16x16.png" type="image/png">
+    <link rel="manifest" href="./imgs/site.webmanifest">
+<!--    <link href="./output.css" rel="stylesheet">-->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -36,14 +36,14 @@
     <meta property="og:description" content="Convert 170 cm to feet and inches easily. Use our simple height converter and explore quick reference charts." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://170cminfeet.com" />
-    <meta property="og:image" content="https://170cminfeet.com/imgs/og-image.png" />
+    <meta property="og:image" content="./imgs/og-image.png" />
     <meta property="og:site_name" content="CM to Feet Converter" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="170 cm in Feet – Convert cm to Feet and Inches" />
     <meta name="twitter:description" content="Quickly convert 170 cm to feet and inches with our accurate online tool and chart." />
-    <meta name="twitter:image" content="https://170cminfeet.com/imgs/og-image.png" />
+    <meta name="twitter:image" content="./imgs/og-image.png" />
     <meta name="twitter:site" content="@Dustin_Egg" />
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
@@ -63,7 +63,7 @@
         <div class="container mx-auto px-4 md:px-8">
             <nav class="flex justify-between items-center">
                 <a href="/" class="flex items-center" aria-label="170cminfeet Home">
-                    <img src="https://170cminfeet.com/imgs/logo.webp" alt="170cminfeet Logo" class="h-10 mr-3" style="width: 40px; height: 40px;" width="40" height="40">
+                    <img src="./imgs/logo.webp" alt="170cminfeet Logo" class="h-10 mr-3" style="width: 40px; height: 40px;" width="40" height="40">
                     <span class="text-xl font-semibold text-gray-900">170cminfeet</span>
                 </a>
                 <div class="hidden md:flex space-x-6">
