--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,6 +8,7 @@
     <link rel="canonical" href="https://170cminfeet.com/privacy-policy">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<!--    <link href="./output.css" rel="stylesheet">-->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
