--- a/404.html
+++ b/404.html
@@ -6,23 +6,23 @@
     <title>404 - Page Not Found | 170 cm in Feet</title>
     <meta name="description" content="The page you're looking for doesn't exist. Return to our height converter to convert 170 cm to feet and inches.">
     <link rel="canonical" href="https://170cminfeet.com/404.html">
-    <link rel="icon" href="https://170cminfeet.com/imgs/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://170cminfeet.com/imgs/favicon.ico" type="image/x-icon">
-    <link href="https://170cminfeet.com/imgs/output.css" rel="stylesheet">
+    <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
+    <link href="./output.css" rel="stylesheet">
 
     <!-- Basic OG Meta -->
     <meta property="og:title" content="404 - Page Not Found | 170 cm in Feet" />
     <meta property="og:description" content="The page you're looking for doesn't exist. Return to our height converter to convert 170 cm to feet and inches." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://170cminfeet.com/404.html" />
-    <meta property="og:image" content="https://170cminfeet.com/imgs/og-image.png" />
+    <meta property="og:image" content="./imgs/og-image.png" />
     <meta property="og:site_name" content="CM to Feet Converter" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="404 - Page Not Found | 170 cm in Feet" />
     <meta name="twitter:description" content="The page you're looking for doesn't exist. Return to our height converter." />
-    <meta name="twitter:image" content="https://170cminfeet.com/imgs/og-image.png" />
+    <meta name="twitter:image" content="./imgs/og-image.png" />
     <meta name="twitter:site" content="@Dustin_Egg" />
 
     <!-- Robots Meta -->
@@ -34,7 +34,7 @@
         <div class="container mx-auto px-4 md:px-8">
             <nav class="flex justify-between items-center">
                 <a href="/" class="flex items-center" aria-label="170cminfeet Home">
-                    <img src="https://170cminfeet.com/imgs/logo.webp" alt="170cminfeet Logo" class="h-10 mr-3" style="width: 40px; height: 40px;" width="40" height="40">
+                    <img src="./imgs/logo.webp" alt="170cminfeet Logo" class="h-10 mr-3" style="width: 40px; height: 40px;" width="40" height="40">
                     <span class="text-xl font-semibold text-gray-900">170cminfeet</span>
                 </a>
                 <div class="hidden md:flex space-x-6">
